# SequenceProcessing-C

./: CMakeLists.txt  FUNCTIONS_PORT_PLAN.md  MODEL_PORT_PLAN.md  PORTING_PLAN.md  PORT_STATUS.md  README.md  TRANSFORMER_PORT_PLAN.md  conanfile.py
src/: CMakeLists.txt  SequenceProcessing.c  SequenceProcessing.h
src/Classification/: BorrowedFunctionProxy.c  BorrowedFunctionProxy.h  GatedRecurrentUnitModel.c  GatedRecurrentUnitModel.h  JavaRandomCompat.c  JavaRandomCompat.h  LongShortTermMemoryModel.c  LongShortTermMemoryModel.h  RecurrentModelGraphBridge.c  RecurrentModelGraphBridge.h  RecurrentNeuralNetworkModel.c  RecurrentNeuralNetworkModel.h  Transformer.c  Transformer.h  TransformerTokenStore.c  TransformerTokenStore.h
src/Functions/: AdditionByConstant.c  AdditionByConstant.h  Inverse.c  Inverse.h  Mask.c  Mask.h  Mean.c  Mean.h  MultiplyByConstant.c  MultiplyByConstant.h  RemoveBias.c  RemoveBias.h  SequenceFunctionEdge.c  SequenceFunctionEdge.h  SquareRoot.c  SquareRoot.h  Switch.c  Switch.h  Transpose.c  Transpose.h  Variance.c  Variance.h
src/Parameters/: RecurrentNeuralNetworkParameter.c  RecurrentNeuralNetworkParameter.h  TransformerParameter.c  TransformerParameter.h
src/Performance/: ClassificationPerformance.c  ClassificationPerformance.h
src/Sequence/: LabelledSentence.c  LabelledSentence.h  LabelledVectorizedWord.c  LabelledVectorizedWord.h  SequenceCorpus.c  SequenceCorpus.h
test/: FunctionSliceTest.c  GatedRecurrentUnitModelTest.c  LongShortTermMemoryModelTest.c  ParameterSliceTest.c  RecurrentNeuralNetworkModelTest.c  SequenceCorpusTest.c  TransformerTest.c
