cmake_minimum_required(VERSION 3.23)
project(SequenceProcessing C)

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_FLAGS "-O3")
add_compile_definitions(_DEFAULT_SOURCE _POSIX_C_SOURCE=200809L)

include(CTest)

set(SEQUENCE_PROCESSING_C_LOCAL_COMPUTATIONAL_GRAPH_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../ComputationalGraph-C")
set(SEQUENCE_PROCESSING_C_LOCAL_CORPUS_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../Corpus-C")
set(SEQUENCE_PROCESSING_C_LOCAL_DICTIONARY_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../Dictionary-C")
set(SEQUENCE_PROCESSING_C_LOCAL_MATH_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../Math-C")
set(SEQUENCE_PROCESSING_C_LOCAL_UTIL_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../Util-C")
set(SEQUENCE_PROCESSING_C_LOCAL_DATA_STRUCTURE_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../DataStructure-C")
set(SEQUENCE_PROCESSING_C_LOCAL_REGULAR_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../Regular-C")

add_subdirectory(src)
